// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot: example files > honglou.tex renders consistently 1`] = `
"<div class="wtc-page" data-template="honglou"><div class="wtc-spread wtc-spread-right">
<div class="wtc-half-page wtc-half-right"><div class="wtc-content-border"><div class="wtc-content">脂硯齋重評石頭記<br class="wtc-newline"><span class="wtc-list"><span class="wtc-list-item">甲戌本
 </span><span class="wtc-list-item">第一回
</span></span><br class="wtc-newline"><span class="wtc-paragraph"><span class="wtc-indent-spacer" style="--wtc-indent-size: calc(2 * var(--wtc-grid-height))"></span>
此開卷第一回也作者自云曾歷過一番夢幻之後故將真事隱去而借通靈說此<span class="wtc-indent-spacer" style="--wtc-indent-size: calc(2 * var(--wtc-grid-height))"></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">石頭</span><span class="wtc-jiazhu-col">記</span></span>一段故事也
</span>列位看官你道此書從何而來說起根由雖近荒唐細按則深有趣味<br class="wtc-newline"><span class="wtc-sidenote">此是第一首標題詩</span>待在下將此來歷註明方使閱者了然不惑<br class="wtc-newline">
當日地陷東南<span class="wtc-jiazhu"><span class="wtc-jiazhu-col">洪荒之世女媧氏</span><span class="wtc-jiazhu-col">煉石補天之時</span></span>這東南一隅有處曰姑蘇</div></div></div><div class="wtc-banxin">
  <div class="wtc-banxin-section wtc-banxin-upper">
    <span class="wtc-banxin-book-name">脂硯齋重評石頭記</span>
    <div class="wtc-yuwei wtc-yuwei-upper"></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-middle">
    <div class="wtc-banxin-chapter"><span class="wtc-banxin-chapter-part">第一回</span></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-lower">
    <div class="wtc-yuwei wtc-yuwei-lower"></div>
  </div>
</div>
</div></div>
<div class="wtc-page" data-template="honglou"><div class="wtc-spread wtc-spread-left">
<div class="wtc-half-page wtc-half-left"><div class="wtc-content-border"><div class="wtc-content"><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">有城曰閶門者最是紅塵</span><span class="wtc-jiazhu-col">中一二等富貴風流之地</span></span><br class="wtc-newline"><span class="wtc-sidenote">妙</span>這閶門外有個十里街街內有個仁清巷巷內有個古廟因地方窄狹人皆呼作葫蘆廟<br class="wtc-newline">
廟旁住著一家鄉宦姓甄名費字士隱<span class="wtc-jiazhu"><span class="wtc-jiazhu-col">真事</span><span class="wtc-jiazhu-col">隱也</span></span>嫡妻封氏情性賢淑深明禮義<br class="wtc-newline"><span class="wtc-emphasis">家中雖不甚富</span>然本地也推他為望族了<br class="wtc-newline"><span class="wtc-proper-name">甄士隱</span>禀性恬淡不以功名為念每日只以觀花修竹酌酒吟詩為樂<br class="wtc-newline">
倒是神仙一流人品<br class="wtc-newline"></div></div></div><div class="wtc-banxin">
  <div class="wtc-banxin-section wtc-banxin-upper">
    <span class="wtc-banxin-book-name">脂硯齋重評石頭記</span>
    <div class="wtc-yuwei wtc-yuwei-upper"></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-middle">
    <div class="wtc-banxin-chapter"><span class="wtc-banxin-chapter-part">第一回</span></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-lower">
    <div class="wtc-yuwei wtc-yuwei-lower"></div>
  </div>
</div>
</div></div>
<div class="wtc-page" data-template="honglou"><div class="wtc-spread wtc-spread-right">
<div class="wtc-pizhu" style="right: 3cm;top: 1cm;">甲戌眉批：開卷一篇立意真打破歷來小說窠臼</div><div class="wtc-half-page wtc-half-right"><div class="wtc-content-border"><div class="wtc-content"><span class="wtc-book-title-mark">石頭記</span>是中國四大名著之一<br class="wtc-newline"><span class="wtc-inverted">卷一</span><br class="wtc-newline"></div></div></div><div class="wtc-banxin">
  <div class="wtc-banxin-section wtc-banxin-upper">
    <span class="wtc-banxin-book-name">脂硯齋重評石頭記</span>
    <div class="wtc-yuwei wtc-yuwei-upper"></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-middle">
    <div class="wtc-banxin-chapter"><span class="wtc-banxin-chapter-part">第一回</span></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-lower">
    <div class="wtc-yuwei wtc-yuwei-lower"></div>
  </div>
</div>
</div></div>
<div class="wtc-page" data-template="honglou"><div class="wtc-spread wtc-spread-left">
<div class="wtc-half-page wtc-half-left"><div class="wtc-content-border"><div class="wtc-content"></div></div></div><div class="wtc-banxin">
  <div class="wtc-banxin-section wtc-banxin-upper">
    <span class="wtc-banxin-book-name">脂硯齋重評石頭記</span>
    <div class="wtc-yuwei wtc-yuwei-upper"></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-middle">
    <div class="wtc-banxin-chapter"><span class="wtc-banxin-chapter-part">第一回</span></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-lower">
    <div class="wtc-yuwei wtc-yuwei-lower"></div>
  </div>
</div>
</div></div>"
`;

exports[`Snapshot: example files > minimal.tex renders consistently 1`] = `
"<div class="wtc-page" data-template="siku-quanshu"><div class="wtc-spread wtc-spread-right">
<div class="wtc-pizhu" style="right: 5cm;top: 2cm;">可在任意位置书写批注</div><div class="wtc-half-page wtc-half-right"><div class="wtc-content-border"><div class="wtc-content">
這是古籍竖排的示例，包含夹注<span class="wtc-jiazhu"><span class="wtc-jiazhu-col">长夹注自动换</span><span class="wtc-jiazhu-col">列，并且自动</span></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">平衡，右列可</span><span class="wtc-jiazhu-col">能多一个字</span></span>的功能演示。<br class="wtc-newline">
空格需手动声明　　可加入参数。<br class="wtc-newline"><span class="wtc-paragraph"><span class="wtc-indent-spacer" style="--wtc-indent-size: calc(2 * var(--wtc-grid-height))"></span>
 天地玄黃<br class="wtc-newline"><span class="wtc-indent-spacer" style="--wtc-indent-size: calc(2 * var(--wtc-grid-height))"></span>
 宇宙洪荒
</span>侧批<span class="wtc-sidenote">较长侧批可换列</span>可在任意位置插入。<br class="wtc-newline"></div></div></div><div class="wtc-banxin">
  <div class="wtc-banxin-section wtc-banxin-upper">
    <span class="wtc-banxin-book-name">欽定四庫全書</span>
    <div class="wtc-yuwei wtc-yuwei-upper"></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-middle">
    <div class="wtc-banxin-chapter"><span class="wtc-banxin-chapter-part">史記</span><span class="wtc-banxin-chapter-part">卷一</span></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-lower">
    <div class="wtc-yuwei wtc-yuwei-lower"></div>
  </div>
</div>
</div></div>
<div class="wtc-page" data-template="siku-quanshu"><div class="wtc-spread wtc-spread-left">
<div class="wtc-half-page wtc-half-left"><div class="wtc-content-border"><div class="wtc-content"></div></div></div><div class="wtc-banxin">
  <div class="wtc-banxin-section wtc-banxin-upper">
    <span class="wtc-banxin-book-name">欽定四庫全書</span>
    <div class="wtc-yuwei wtc-yuwei-upper"></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-middle">
    <div class="wtc-banxin-chapter"><span class="wtc-banxin-chapter-part">史記</span><span class="wtc-banxin-chapter-part">卷一</span></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-lower">
    <div class="wtc-yuwei wtc-yuwei-lower"></div>
  </div>
</div>
</div></div>"
`;

exports[`Snapshot: example files > shiji.tex renders consistently 1`] = `
"<div class="wtc-page" data-template="siku-quanshu-colored"><div class="wtc-spread wtc-spread-right">
<div class="wtc-half-page wtc-half-right"><div class="wtc-content-border"><div class="wtc-content">
欽定四庫全書<br class="wtc-newline"><span class="wtc-list"><span class="wtc-list-item">史記卷一
 </span><span class="wtc-list-item"><span class="wtc-list"><span class="wtc-list-item">漢太史令司馬遷　撰
 </span><span class="wtc-list-item">宋中郎外兵曹參軍裴駰集解
 </span><span class="wtc-list-item">唐國子博士弘文館學士司馬貞索隠
 </span><span class="wtc-list-item">唐諸王侍讀率府長史張守节正义
 </span></span></span><span class="wtc-list-item">五帝本紀第一
</span></span><br class="wtc-newline"><span class="wtc-paragraph"><span class="wtc-indent-spacer" style="--wtc-indent-size: calc(3 * var(--wtc-grid-height))"></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">集解裴駰曰凡是徐氏義稱徐姓名以别之餘</span><span class="wtc-jiazhu-col">者悉是駰註解并集衆家義索隠紀者記也本</span></span></span></div></div></div><div class="wtc-banxin">
  <div class="wtc-banxin-section wtc-banxin-upper">
    <span class="wtc-banxin-book-name">欽定四庫全書</span>
    <div class="wtc-yuwei wtc-yuwei-upper"></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-middle">
    <div class="wtc-banxin-chapter"><span class="wtc-banxin-chapter-part">史記</span><span class="wtc-banxin-chapter-part">卷一</span></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-lower">
    <div class="wtc-yuwei wtc-yuwei-lower"></div>
  </div>
</div>
</div></div>
<div class="wtc-page" data-template="siku-quanshu-colored"><div class="wtc-spread wtc-spread-left">
<div class="wtc-half-page wtc-half-left"><div class="wtc-content-border"><div class="wtc-content"><span class="wtc-paragraph"><span class="wtc-indent-spacer" style="--wtc-indent-size: calc(3 * var(--wtc-grid-height))"></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">其事而記之故曰本紀又紀理也絲縷有紀而</span><span class="wtc-jiazhu-col">帝王書稱紀者言為後代綱紀也正義鄭玄注</span></span><span class="wtc-indent-spacer" style="--wtc-indent-size: calc(3 * var(--wtc-grid-height))"></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">中候勅省圖云徳合五帝坐星者稱帝又坤靈</span><span class="wtc-jiazhu-col">圖云徳配天地在正不在私曰帝按太史公依</span></span><span class="wtc-indent-spacer" style="--wtc-indent-size: calc(3 * var(--wtc-grid-height))"></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">世本大戴禮以黄帝顓頊帝嚳唐堯虞舜為五</span><span class="wtc-jiazhu-col">帝譙周應劭宋均皆同而孔安國尚書序皇甫</span></span><span class="wtc-indent-spacer" style="--wtc-indent-size: calc(3 * var(--wtc-grid-height))"></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">謐帝王世紀孫氏注世本並以伏犧神農黄帝</span><span class="wtc-jiazhu-col">為三皇少昊顓頊髙辛唐虞為五帝裴松之史</span></span><span class="wtc-indent-spacer" style="--wtc-indent-size: calc(3 * var(--wtc-grid-height))"></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">目云天子稱本紀諸侯曰世家本者繫其本系</span><span class="wtc-jiazhu-col">故曰本紀者理也統理衆亊繫之年月名之曰</span></span><span class="wtc-indent-spacer" style="--wtc-indent-size: calc(3 * var(--wtc-grid-height))"></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">紀第者次序之目一者舉數之由故曰五帝本</span><span class="wtc-jiazhu-col">紀第一禮云動則左史書之言則右史書之左</span></span><span class="wtc-indent-spacer" style="--wtc-indent-size: calc(3 * var(--wtc-grid-height))"></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">陽故記動右隂故記言言為尚書事为</span><span class="wtc-jiazhu-col">春秋按春秋时置左右史故云史记</span></span></span>黄帝者<span class="wtc-jiazhu"><span class="wtc-jiazhu-col">集解徐</span><span class="wtc-jiazhu-col">廣曰號</span></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">有熊索隠按有土徳之瑞土色黄故稱黄帝猶神農火</span><span class="wtc-jiazhu-col">徳王而稱炎帝然也此以黄帝為五帝之首蓋依大戴</span></span></div></div></div><div class="wtc-banxin">
  <div class="wtc-banxin-section wtc-banxin-upper">
    <span class="wtc-banxin-book-name">欽定四庫全書</span>
    <div class="wtc-yuwei wtc-yuwei-upper"></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-middle">
    <div class="wtc-banxin-chapter"><span class="wtc-banxin-chapter-part">史記</span><span class="wtc-banxin-chapter-part">卷一</span></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-lower">
    <div class="wtc-yuwei wtc-yuwei-lower"></div>
  </div>
</div>
</div></div>
<div class="wtc-page" data-template="siku-quanshu-colored"><div class="wtc-spread wtc-spread-right">
<div class="wtc-half-page wtc-half-right"><div class="wtc-content-border"><div class="wtc-content"><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">禮五帝徳又譙周宋均亦以為然而孔安國皇甫謐帝</span><span class="wtc-jiazhu-col">王代紀及孫氏註系本並以伏犧神農黄帝為三皇少</span></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">昊髙陽髙辛唐虞為五帝註號有熊者以其本是有熊</span><span class="wtc-jiazhu-col">國君之子故也都軒轅之丘因以為名又以為號又據</span></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">左傳亦號帝鴻氏也正義輿地志云涿鹿本名彭城黄</span><span class="wtc-jiazhu-col">帝初都遷有熊也按黄帝有熊國君乃少典國君之次</span></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">子號曰有熊氏又曰縉雲氏又曰帝鴻氏亦曰帝軒氏</span><span class="wtc-jiazhu-col">母曰附寶之祁野見大電繞北斗樞星感而懐孕二十</span></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">四月而生黄帝於壽丘夀丘在魯東門之北今在兖州</span><span class="wtc-jiazhu-col">曲阜縣東北六里生日角龍顔有景雲之瑞以土徳王</span></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">故曰黄帝封泰山禪</span><span class="wtc-jiazhu-col">亭亭亭亭在牟隂</span></span>少典之子<span class="wtc-jiazhu"><span class="wtc-jiazhu-col">集解譙周曰有熊國君</span><span class="wtc-jiazhu-col">少典之子也皇甫謐曰</span></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">有熊今河南新鄭是也索隠少典者諸侯國號非人名</span><span class="wtc-jiazhu-col">也又按國語云少典娶有蟜氏女而生炎帝然則炎帝</span></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">亦少典之子炎黄二帝雖則承帝王代紀中間凡隔八</span><span class="wtc-jiazhu-col">帝五百餘年若以少典是其父名豈黄帝經五百餘年</span></span></div></div></div><div class="wtc-banxin">
  <div class="wtc-banxin-section wtc-banxin-upper">
    <span class="wtc-banxin-book-name">欽定四庫全書</span>
    <div class="wtc-yuwei wtc-yuwei-upper"></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-middle">
    <div class="wtc-banxin-chapter"><span class="wtc-banxin-chapter-part">史記</span><span class="wtc-banxin-chapter-part">卷一</span></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-lower">
    <div class="wtc-yuwei wtc-yuwei-lower"></div>
  </div>
</div>
</div></div>
<div class="wtc-page" data-template="siku-quanshu-colored"><div class="wtc-spread wtc-spread-left">
<div class="wtc-half-page wtc-half-left"><div class="wtc-content-border"><div class="wtc-content"><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">而始代炎帝後為天子乎何其年之长也又按秦本紀</span><span class="wtc-jiazhu-col">云顓頊氏之裔孫曰女脩吞玄鳥之卵而生大业大业</span></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">娶少典氏而生栢翳明少典是国号非人名也黄帝者</span><span class="wtc-jiazhu-col">少典氏后代之子孙贾逵亦以左传高阳氏有才子八</span></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">人亦谓其后代子孙而称为子是也谯周字允南蜀人</span><span class="wtc-jiazhu-col">魏散骑常侍征不拜此注所引者是其人所着古史考</span></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">之说也皇甫谧字士安晋人号玄晏先</span><span class="wtc-jiazhu-col">生今所引者是其所作帝王世纪也</span></span>姓公孫名曰軒轅<span class="wtc-jiazhu"><span class="wtc-jiazhu-col">索隠按皇甫謐云黄帝生於壽丘長於姬水因以為</span><span class="wtc-jiazhu-col">姓居軒轅之丘因以為名又以為號是本姓公孫長</span></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">居姬水因</span><span class="wtc-jiazhu-col">改姓姬</span></span>生而神靈弱而能言<span class="wtc-jiazhu"><span class="wtc-jiazhu-col">索隠弱謂幼弱时也盖</span><span class="wtc-jiazhu-col">未合能言之时而黄帝</span></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">即言所以为神异也潘岳有哀弱子篇其子未七旬曰</span><span class="wtc-jiazhu-col">弱正义言神异也易曰阴阳不测之谓神书曰人惟万</span></span><span class="wtc-jiazhu"><span class="wtc-jiazhu-col">物之灵故谓</span><span class="wtc-jiazhu-col">之神灵也</span></span>幼而徇齊<span class="wtc-jiazhu"><span class="wtc-jiazhu-col">集解徐廣曰墨</span><span class="wtc-jiazhu-col">子曰年踰十五</span></span><br class="wtc-newline"></div></div></div><div class="wtc-banxin">
  <div class="wtc-banxin-section wtc-banxin-upper">
    <span class="wtc-banxin-book-name">欽定四庫全書</span>
    <div class="wtc-yuwei wtc-yuwei-upper"></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-middle">
    <div class="wtc-banxin-chapter"><span class="wtc-banxin-chapter-part">史記</span><span class="wtc-banxin-chapter-part">卷一</span></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-lower">
    <div class="wtc-yuwei wtc-yuwei-lower"></div>
  </div>
</div>
</div></div>
<div class="wtc-page" data-template="siku-quanshu-colored"><div class="wtc-spread wtc-spread-right">
<div class="wtc-half-page wtc-half-right"><div class="wtc-content-border"><div class="wtc-content"></div></div></div><div class="wtc-banxin">
  <div class="wtc-banxin-section wtc-banxin-upper">
    <span class="wtc-banxin-book-name">欽定四庫全書</span>
    <div class="wtc-yuwei wtc-yuwei-upper"></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-middle">
    <div class="wtc-banxin-chapter"><span class="wtc-banxin-chapter-part">史記</span><span class="wtc-banxin-chapter-part">卷一</span></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-lower">
    <div class="wtc-yuwei wtc-yuwei-lower"></div>
  </div>
</div>
</div></div>
<div class="wtc-page" data-template="siku-quanshu-colored"><div class="wtc-spread wtc-spread-left">
<div class="wtc-half-page wtc-half-left"><div class="wtc-content-border"><div class="wtc-content"></div></div></div><div class="wtc-banxin">
  <div class="wtc-banxin-section wtc-banxin-upper">
    <span class="wtc-banxin-book-name">欽定四庫全書</span>
    <div class="wtc-yuwei wtc-yuwei-upper"></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-middle">
    <div class="wtc-banxin-chapter"><span class="wtc-banxin-chapter-part">史記</span><span class="wtc-banxin-chapter-part">卷一</span></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-lower">
    <div class="wtc-yuwei wtc-yuwei-lower"></div>
  </div>
</div>
</div></div>"
`;

exports[`Snapshot: example files > showcase.tex renders consistently 1`] = `
"<div class="wtc-page" data-template="siku-quanshu"><div class="wtc-spread wtc-spread-right">
<div class="wtc-pizhu" style="right: 3cm;top: 1cm;">页面任意位置的浮动批注</div><div class="wtc-half-page wtc-half-right"><div class="wtc-content-border"><div class="wtc-content">功能展示<br class="wtc-newline"><span class="wtc-list"><span class="wtc-list-item">竖排排版
 </span><span class="wtc-list-item">夹注与侧批
 </span><span class="wtc-list-item">装饰与边框
</span></span><br class="wtc-newline">基本竖排：天地玄黃宇宙洪荒日月盈昃辰宿列張
寒來暑往秋收冬藏閏餘成歲律呂調陽<br class="wtc-newline">夹注示例：黄帝者<span class="wtc-jiazhu"><span class="wtc-jiazhu-col">集解徐廣曰號有熊索隠按有</span><span class="wtc-jiazhu-col">土徳之瑞土色黄故稱黄帝</span></span>少典之子<span class="wtc-jiazhu"><span class="wtc-jiazhu-col">集解譙周曰有熊國君少典之子也</span><span class="wtc-jiazhu-col">皇甫謐曰有熊今河南新鄭是也</span></span>姓公孫名曰軒轅</div></div></div><div class="wtc-banxin">
  <div class="wtc-banxin-section wtc-banxin-upper">
    <span class="wtc-banxin-book-name">欽定四庫全書</span>
    <div class="wtc-yuwei wtc-yuwei-upper"></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-middle">
    <div class="wtc-banxin-chapter"><span class="wtc-banxin-chapter-part">功能展示</span></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-lower">
    <div class="wtc-yuwei wtc-yuwei-lower"></div>
  </div>
</div>
</div></div>
<div class="wtc-page" data-template="siku-quanshu"><div class="wtc-spread wtc-spread-left">
<div class="wtc-half-page wtc-half-left"><div class="wtc-content-border"><div class="wtc-content"><br class="wtc-newline"><span class="wtc-paragraph"><span class="wtc-indent-spacer" style="--wtc-indent-size: calc(2 * var(--wtc-grid-height))"></span>
段落缩进两格的效果<br class="wtc-newline"><span class="wtc-indent-spacer" style="--wtc-indent-size: calc(2 * var(--wtc-grid-height))"></span>
第二列也缩进
</span>侧批：天子<span class="wtc-sidenote">此处为侧批</span>诸侯<span class="wtc-sidenote">又一侧批</span>卿大夫<br class="wtc-newline">装饰功能：
<span class="wtc-emphasis">重要文字</span>需要圈点标注
<span class="wtc-proper-name">司馬遷</span>为史记作者
<span class="wtc-book-title-mark">史記</span>是纪传体通史<br class="wtc-newline">特殊文本框：
<span class="wtc-inverted">卷一</span>为反白效果
<span class="wtc-circled">壹</span>为带圈效果空格　　　控制<br class="wtc-newline"></div></div></div><div class="wtc-banxin">
  <div class="wtc-banxin-section wtc-banxin-upper">
    <span class="wtc-banxin-book-name">欽定四庫全書</span>
    <div class="wtc-yuwei wtc-yuwei-upper"></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-middle">
    <div class="wtc-banxin-chapter"><span class="wtc-banxin-chapter-part">功能展示</span></div>
  </div>
  <div class="wtc-banxin-section wtc-banxin-lower">
    <div class="wtc-yuwei wtc-yuwei-lower"></div>
  </div>
</div>
</div></div>"
`;
